--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.10"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.3"
+sympy = "^1.13.3"
 
 [build-system]
 requires = ["poetry-core"]
